Fix spacing issue on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1034,7 +1034,6 @@ nav {
         align-items: center;
         justify-content: space-between;
         list-style: none;
-        padding: 2px 20px;
       }
 
       .perk {
@@ -1114,7 +1113,6 @@ nav {
   }
 
   .post {
-    flex-basis: 48%;
     border-radius: 30px;
     margin-bottom: 20px;
     padding: 16px;
